--- a/frontend/appointments.html
+++ b/frontend/appointments.html
@@ -10,12 +10,18 @@
     <div class="container">
         <h1>Foothills Hospital Appointment System</h1>
         
-        <div class="section">
-            <h2>Current Appointments</h2>
-            <ul id="appointments_list"></ul>
+        <div class="section1">
+            <label for="viewinfo">Veiw Info:</label>
+            <input type="text" id="info">
+            <button onclick="showDoctors()">View Patient Info</button>
         </div>
-        
-        <div class="section">
+
+        <div id="section1">
+            <input type="text" id="userInput" placeholder="Type your message here..." onkeypress="handleKeyPress(event)" />
+            <button id="sendButton" onclick="showDoctors()">&#8594;</button>
+        </div>
+
+        <div class="section2">
             <label for="specialty">Specialty:</label>
             <input type="text" id="specialty">
             <button onclick="showDoctors()">Search Doctors</button>
